--- a/src/data/_colors.scss
+++ b/src/data/_colors.scss
@@ -36,6 +36,7 @@ $deepgray: hsl(0, 0%, 10%);
 $darkgray: hsl(0, 0%, 15%);
 $lightblue: hsl(200, 40%, 60%);
 $gray: hsl(210, 5%, 40%);
+$lightgray: hsl(210, 5%, 60%);
 $white: hsl(0, 0%, 70%);
 $blue: hsl(200, 20%, 50%);
 $red: hsl(340, 50%, 60%);
