Enhance SVG icons and pagination styles
- Added a new "moreHorizontal" SVG icon to the vector icons.
- Updated the "logIn" SVG icon for consistency.
- Improved pagination styles:
  - Ensured buttons have full opacity on smaller screens.
  - Adjusted pointer events for selected pages.
  - Modified the visual indicator in collapsed state to use the new icon and adjusted its positioning.
- Made sticky elements responsive by adjusting their top position on smaller screens.
- Set a background color for tables in vocabularies section.

--- a/src/vocabularies/vocabularies.scss
+++ b/src/vocabularies/vocabularies.scss
@@ -23,6 +23,10 @@
       position: sticky !important;
       top: 100px !important;
 
+      @media (max-width: 1000px) {
+        top: 140px !important;
+      }
+
       a.create_voc {
         margin: 0 !important;
         border-radius: 5px !important;
@@ -101,6 +105,10 @@
         position: sticky !important;
         top: 100px !important;
         z-index: 5 !important;
+
+        @media (max-width: 1000px) {
+          top: 140px !important;
+        }
       }
 
       input[type="submit"] {
@@ -108,6 +116,8 @@
       }
 
       table {
+        background: $darkgray !important;
+
         tbody {
           display: grid !important;
           width: 100% !important;
