--- a/src/pagination.scss
+++ b/src/pagination.scss
@@ -46,6 +46,7 @@
     cursor: pointer !important;
 
     @media (max-width: 800px) {
+      opacity: 1 !important;
       width: 45px !important;
       height: 45px !important;
       bottom: unset !important;
@@ -65,6 +66,7 @@
       .page,
       .selected {
         opacity: 1 !important;
+        pointer-events: auto !important;
       }
     }
 
@@ -74,19 +76,20 @@
     .selected {
       opacity: 0 !important;
       transition: opacity 0.15s ease-in-out !important;
+      pointer-events: none !important;
     }
 
     // Add a visual indicator in collapsed state
     &::before {
-      content: "..." !important;
+      content: "" !important;
       position: absolute !important;
-      top: 50% !important;
-      left: 50% !important;
-      transform: translate(-50%, -50%) !important;
-      color: $white !important;
-      font-weight: bold !important;
+      top: 0 !important;
+      left: 0 !important;
+      width: 100% !important;
+      height: 100% !important;
       pointer-events: none !important;
       z-index: 1 !important;
+      background: transparent icon("moreHorizontal", $lightblue) no-repeat center !important;
     }
 
     &:hover::before {
