Refactor SCSS to disable background images in specific containers
- Added styles in garbage.scss to hide background images from container corners for the KlavoTools BBTools emoticons panel and Klavogonki popup messages.
- Removed redundant background image hiding styles from _smilesPanel.scss to streamline the code.

--- a/src/garbage.scss
+++ b/src/garbage.scss
@@ -16,3 +16,20 @@
 .br {
   background: none !important;
 }
+
+// Disable fully images from container corners
+// KlavoTools BBTools emoticons panel
+#table_smiles,
+// Klavogonki popup message (newrecord, shadow, howtoplay, competition_alert, popalert, popconfirm)
+.popup_message {
+  .t,
+  .b,
+  .l,
+  .r,
+  .tl,
+  .tr,
+  .bl,
+  .br {
+    display: none !important;
+  }
+}
