--- a/src/logo/logo-adaptive.scss
+++ b/src/logo/logo-adaptive.scss
@@ -1,7 +1,9 @@
 @media (max-width: 1000px) {
   #head #logo {
     top: 88px !important;
+    left: 5px !important;
     width: 55px !important;
+
     a {
       width: 55px !important;
       &::after {
