Add new star icon and update styles in forum sections
- Added a new "star" SVG icon to the vector icons.
- Changed text color from $lightgray to $white for "Темы:" and "Сообщения:" labels in branchesList.
- Imported sectionsList in forum.scss for better organization.
- Updated flex-layout mixin for improved readability.
- Created a new _sectionsList.scss file with styles for the forum content, including responsive design for table layout and item rows.

--- a/src/forum/_branchesList.scss
+++ b/src/forum/_branchesList.scss
@@ -116,7 +116,7 @@
           &:before {
             content: "Темы:" !important;
             margin-right: 5px !important;
-            color: $lightgray !important;
+            color: $white !important;
           }
         }
       }
@@ -134,7 +134,7 @@
           &:before {
             content: "Сообщения:" !important;
             margin-right: 5px !important;
-            color: $lightgray !important;
+            color: $white !important;
           }
         }
       }
@@ -171,7 +171,6 @@
 
           a {
             @include anchor-to-button(1em);
-            white-space: break-spaces !important;
 
             @media (max-width: 900px) {
               margin-bottom: 10px !important;
