--- a/src/forum/forum.scss
+++ b/src/forum/forum.scss
@@ -1,5 +1,6 @@
 @import "../data/variables";
 @import "../mixins";
 @import "branchesList";
+@import "sectionsList";
 @import "postsList";
 @import "addTopic";
